[package]
name = "communicationcore"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
capnp = "0.18.3"
capnpc = "0.17.0"
os_pipe = "1.1.4"

[build-dependencies]
capnpc = "0.17.0"

[lib]
name = "communicationcore"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]