[package]
name = "communicationmanager"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
# [profile.release]
# debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
async-std = "1.7.0"
crossbeam-channel = "0.5.12"
libc = {path="libc"}
shuffle = "0.1.7"
capnp = "0.18.3"
capnpc = "0.17.0"
os_pipe = "1.1.4"
chrono = "0.4.31"


[build-dependencies]
capnpc = "0.17.0"