[package]
name = "emulationcore"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# [profile.release]
# debug = true

#[target.x86_64-unknown-linux-gnu]
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = { version = "1.17.0", features = ["full"] }
redbpf = {version = "2.3.0", features = ["load"]}
monitor = { path = "./monitor" }
libloading = "0.7.3"
roxmltree = "0.14.1"
random-string = "1.0"
regex = "1"
pnet = "0.29.0"
ipnetwork = "0.18.0"
trust-dns-resolver = "*"
rand = "0.8.4"
rand_pcg = "0.3.1"
docker-api = "0.12"
subprocess = "0.2.8"
kube = { version = "0.69.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
futures = "0.3.21"
elementtree = "0.7.0"
zero = "=0.1.2"
capnp = "0.18.3"
capnpc = "0.17.0"
os_pipe = "1.1.4"
chrono = "0.4.31"

[build-dependencies]
capnpc = "0.17.0"