[package]
name = "monitor"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = {path = "../redbpf/redbpf-macros"}
redbpf-probes = {path = "../redbpf/redbpf-probes"}
memoffset = "0.6.1"

[build-dependencies]
cargo-bpf = { version = "2.0", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "usage"
path = "src/usage/main.rs"
required-features = ["probes"]
